# internal/app/docs/swagger.yaml
@@ -58,7 +58,7 @@ paths:
           schema: {}
       summary: GetBook
       tags:
-      - books
+      - book
   /book/books:
     get:
       consumes:
@@ -90,7 +90,7 @@ paths:
           schema: {}
       summary: GetBooks
       tags:
-      - books
+      - book
   /book/create:
     post:
       consumes:
@@ -118,7 +118,7 @@ paths:
           schema: {}
       summary: CreateBook
       tags:
-      - books
+      - book
   /book/delete:
     delete:
       consumes:
@@ -144,7 +144,7 @@ paths:
           schema: {}
       summary: DeleteBook
       tags:
-      - books
+      - book
   /book/update:
     put:
       consumes:
@@ -176,7 +176,7 @@ paths:
           schema: {}
       summary: UpdateBook
       tags:
-      - books
+      - book
   /metrics:
     get:
       description: Returns application metrics in expvar format
